--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mockdate": "^3.0.2",
     "mongodb": "^3.5.8",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
@@ -38,6 +39,7 @@
     "@types/jsonwebtoken": "^8.3.9",
     "@types/mongodb": "^3.5.20",
     "@types/multer": "^1.4.3",
+    "@types/node": "^14.0.27",
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
