--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,13 @@
     "@unform/core": "^2.1.0",
     "@unform/web": "^2.1.0",
     "axios": "^0.19.2",
+    "date-fns": "^2.15.0",
+    "date-fns-timezone": "^0.1.4",
     "eslint": "^6.8.0",
     "polished": "^3.6.1",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
@@ -45,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qs": "^6.9.4",
     "@types/react-input-mask": "^2.0.5",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
