--- a/appgobarber/.eslintrc.json
+++ b/appgobarber/.eslintrc.json
@@ -8,6 +8,7 @@
     "airbnb",
     "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint",
+    "prettier/react",
     "plugin:prettier/recommended"
   ],
   "globals": {
