--- a/web/package.json
+++ b/web/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^3.4.2",
     "@types/qs": "^6.9.4",
     "@types/react-input-mask": "^2.0.5",
     "@types/react-router-dom": "^5.1.5",
@@ -65,7 +66,8 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "react-test-renderer": "^17.0.1"
   },
   "jest": {
     "collectCoverageFrom": [
